--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 		
 				<div class="subMenu smint fxd" style="position: fixed; top: 0px;"><!-- Navigation -->
 					<div class="inner">
-						<a href="http://estetiq.co/canyonstudio/01/#home" id="s1-top" class="subNavBtn">Home</a>
-						<a href="http://estetiq.co/canyonstudio/01/#about" id="s2" class="subNavBtn">About</a>
-						<a href="http://estetiq.co/canyonstudio/01/#services" id="s3" class="subNavBtn">Services</a>
-						<a href="http://estetiq.co/canyonstudio/01/#portfolio" id="s4" class="subNavBtn">Portfolio</a>
+						<a href="#home" id="s1-top" class="subNavBtn">Home</a>
+						<a href="#about" id="s2" class="subNavBtn">About</a>
+						<a href="#services" id="s3" class="subNavBtn">Services</a>
+						<a href="#portfolio" id="s4" class="subNavBtn">Portfolio</a>
 					</div>
 		
 				</div><!-- end Navigation -->
