--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<h2>Education</h2>
                         <h3>Bachelor's Degree Level 2 in Software Engineering</h3>
                         <h4>Asia Pacific University, 2016</h4>
-						<p>Througout my student life, I learned several programming skills such as Java, C++ and C# as well. I know how to design and develop software applications and if you are interested in them, you can follow the Github link illustrated on the top. However, during that period, I learned and improved my Photoshop and Photohraphy skills, because I find this kind of activity very interesting and breathtaking. Moreover, I found myself interested in <strong>Front-End Programming</strong>, especially, <strong>HTML5 and CSS3</strong> languages.
+						<p>Througout my student life, I learned several programming skills such as Java, C++ and C# as well. I know how to design and develop software applications and if you are interested in them, you can follow the Github link illustrated at the bottom of this page. However, during that period, I learned and improved my Photoshop and Photohraphy skills, because I find this kind of activity very interesting and breathtaking. Moreover, I found myself interested in <strong>Front-End Programming</strong>, especially, <strong>HTML5 and CSS3</strong> languages.
                             
                         <h3>Foundation Program in Information Technology</h3>
                         <h4>Asia Pacific University, 2014</h4>
